Programming languages and paradigms/Interpreter/examples/bad/missing_return.ho
func main() {
    print(f()); 
}

func f() int { // error:5:14: missing return at end of function

}